Updating language file on some files. Preparing change in inclusion mode to ask for device type to include

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -1,26 +1,39 @@
 {
     "plugins/arubaiot/desktop/php/ArubaIot.php": {
-        "Gestion": "Management",
+        "401 - Accès non autorisé": "401 - Denied access",
+        "Vous etes en mode inclusion. Recliquez sur le bouton d\'inclusion pour sortir de ce mode": "You are in inclusion mode. Click again on inclusion button to exit this mode.",
+        Gestion": "Management",
         "Ajouter": "Add",
-        
-        "Mes IFTTT": "My IFTTT",
-        "Général": "Main",
-        "Nom de l'équipement IFTTT": "IFTTT device name",
-        "Objet parent": "Parent object",
-        "Aucun": "None",
-        "Activer": "Enabled",
-        "Visible": "Visible",
-        "Clef": "Key",
-        "IFTTT": "IFTTT",
-        "Ajouter une commande": "Add a command",
-        "Nom": "Name",
-        "Sous-type": "Sub-type",
-        "Evènement": "Event",
-        "Valeur": "Value",
-        "Action": "Action",
+        "Arrêter inclusion": "Stop inclusion",
+        "Mode inclusion": "Inclusion mode",
+        "Rapporteurs": "Reporters",
+        "Configuration": "Configuration",
+        "Mes Equipements": "My Devices",
+        "Rechercher": "Search",
+        "Equipements Enocean": "Enocean Devices",
+        "Etiquettes Aruba": "Aruba Tags",
+        "Autres Equipements IoT": "Others IoT Devices",
+        "Configuration avancée": "Advanced configuration",
+        "Dupliquer": "Duplicate",
         "Supprimer": "Delete",
         "Sauvegarder": "Save",
-        "#": "#",
-        "Catégorie": "Category"
+        "Equipement": "Device",
+        "Commandes"; "Commands",
+        "Nom de l'équipement ArubaIot": "ArubaIot Device Name",
+        "Objet parent": "Parent object",
+        "Aucun": "None",
+        "Catégorie": "Category",
+        "Activer": "Enabled",
+        "Visible": "Visible",
+        "Adresse MAC": "MAC Address",
+        "Type d'objet": "Object Type",
+        "Nom du Fabriquant": "Vendro Name",
+        "Nom Local": "Local Name",
+        "Modèle": "Model",
+        "Nom": "Name",
+        "Type": "Type",
+        "Action": "Action",
+
+        "#": "#"
     }
 }
