Change the internal classname format to vendor_id:model_id to be more generic and able to evolve quickly

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -53,6 +53,7 @@
         "Modèle" : "Model",
         "Version" : "Version",
         "Date de mise à jour" : "Update time",
+        "Date connexion" : "Up time",
         "Rafraichir" : "Refresh",
 
 
